# vxsort-cpp

./: .clang-format  .clang-tidy.yml  .gitignore  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  LICENSE  README.md  build.sh  clang-tidy.sh
bench/: BM_fullsort.avx2.cpp  BM_fullsort.avx512.cpp  BM_fullsort.double.cpp  BM_fullsort.float.cpp  BM_fullsort.h  BM_fullsort.int32_t.cpp  BM_fullsort.int64_t.cpp  BM_fullsort.portable.cpp  BM_fullsort.uint32_t.cpp  BM_fullsort.uint64_t.cpp  BM_smallsort.avx512.cpp  BM_smallsort.cpp  BM_smallsort.h  BM_sort.cpp  CMakeLists.txt  bench.cpp  bench_isa.h  internal_macros.h  make-figure.py  requirements.txt  run.cmd  run.sh  stolen-cycleclock.h  util.cpp  util.h
bench/fullsort/: BM_fullsort.avx2.cpp  BM_fullsort.avx512.cpp  BM_fullsort.h  BM_fullsort.pdqsort.cpp  BM_fullsort.portable.cpp  BM_fullsort.stdsort.cpp  BM_fullsort.vxsort.avx2.cpp  BM_fullsort.vxsort.avx2.f.cpp  BM_fullsort.vxsort.avx2.i.cpp  BM_fullsort.vxsort.avx2.u.cpp  BM_fullsort.vxsort.avx512.cpp  BM_fullsort.vxsort.avx512.f.cpp  BM_fullsort.vxsort.avx512.i.cpp  BM_fullsort.vxsort.avx512.u.cpp  BM_fullsort.vxsort.h  BM_fullsort_strided.avx2.cpp  BM_fullsort_strided.avx512.cpp  fullsort_params.h
bench/packnsort/: BM_packnsort.avx2.cpp  BM_packnsort.avx512.cpp  BM_packnsort.h
bench/packunpack/: BM_packunpack.avx2.cpp  BM_packunpack.avx512.cpp  BM_packunpack.h
bench/smallsort/: BM_blacher.avx2.cpp  BM_insertionsort.cpp  BM_smallsort.avx2.cpp  BM_smallsort.avx512.cpp  BM_smallsort.h
demo/: CMakeLists.txt  demo.cpp  do_avx2.cpp  do_avx512.cpp
gcsort/: CMakeLists.txt  bitonic_gen.py  bitonic_sort.double.generated.h  bitonic_sort.double.generated.hpp  bitonic_sort.float.generated.h  bitonic_sort.float.generated.hpp  bitonic_sort.h  bitonic_sort.int32_t.generated.h  bitonic_sort.int32_t.generated.hpp  bitonic_sort.int64_t.generated.h  bitonic_sort.int64_t.generated.hpp  bitonic_sort.uint32_t.generated.h  bitonic_sort.uint32_t.generated.hpp  bitonic_sort.uint64_t.generated.h  bitonic_sort.uint64_t.generated.hpp  defs.h  gcsort.h  introsort.cpp  introsort.h  introsort_orig.cpp  introsort_orig.h  isa_detection.h  isa_detection_msvc.cpp  isa_detection_sane.cpp  machine_traits.avx2.cpp  machine_traits.avx2.h  machine_traits.avx512.h  machine_traits.h  vxsort.cpp  vxsort.double.h  vxsort.float.h  vxsort.h  vxsort.int32_t.h  vxsort.int64_t.h  vxsort.uint32_t.h  vxsort.uint64_t.h
gcsort/smallsort/: bitonic_gen.py  bitonic_sort.AVX2.double.generated.cpp  bitonic_sort.AVX2.double.generated.h  bitonic_sort.AVX2.float.generated.cpp  bitonic_sort.AVX2.float.generated.h  bitonic_sort.AVX2.int32_t.generated.cpp  bitonic_sort.AVX2.int32_t.generated.h  bitonic_sort.AVX2.int64_t.generated.cpp  bitonic_sort.AVX2.int64_t.generated.h  bitonic_sort.AVX2.uint32_t.generated.cpp  bitonic_sort.AVX2.uint32_t.generated.h  bitonic_sort.AVX2.uint64_t.generated.cpp  bitonic_sort.AVX2.uint64_t.generated.h  bitonic_sort.AVX512.double.generated.cpp  bitonic_sort.AVX512.double.generated.h  bitonic_sort.AVX512.float.generated.cpp  bitonic_sort.AVX512.float.generated.h  bitonic_sort.AVX512.int32_t.generated.cpp  bitonic_sort.AVX512.int32_t.generated.h  bitonic_sort.AVX512.int64_t.generated.cpp  bitonic_sort.AVX512.int64_t.generated.h  bitonic_sort.AVX512.uint32_t.generated.cpp  bitonic_sort.AVX512.uint32_t.generated.h  bitonic_sort.AVX512.uint64_t.generated.cpp  bitonic_sort.AVX512.uint64_t.generated.h  bitonic_sort.double.generated.h  bitonic_sort.float.generated.h  bitonic_sort.h  bitonic_sort.int32_t.generated.h  bitonic_sort.int64_t.generated.h  bitonic_sort.uint32_t.generated.h  bitonic_sort.uint64_t.generated.h
tests/: CMakeLists.txt  fixtures.h  gtest_main.cpp  sort_fixtures.h  test_isa.h  test_sort.cpp  test_sort_double.cpp  test_sort_float.cpp  test_sort_int32.cpp  test_sort_int64.cpp  test_sort_uint32.cpp  test_sort_uint64.cpp  test_vectors.h  util.h
tests/fullsort/: crashes.cpp  fullsort.avx2.cpp  fullsort.avx2.f.cpp  fullsort.avx2.i.cpp  fullsort.avx2.u.cpp  fullsort.avx512.cpp  fullsort.avx512.f.cpp  fullsort.avx512.i.cpp  fullsort.avx512.u.cpp  fullsort.h  fullsort_double.cpp  fullsort_float.cpp  fullsort_int32.cpp  fullsort_int64.cpp  fullsort_test.h  fullsort_uint32.cpp  fullsort_uint64.cpp
tests/known_unknowns/: masked_load_store.avx2.cpp  masked_load_store.avx512.cpp  masked_load_store.h  masked_load_store.sanity.cpp
tests/mini_tests/: masked_load_store.avx2.cpp  masked_load_store.avx512.cpp  masked_load_store.h  masked_load_store.sanity.cpp  masked_load_store_test.h  mini_fixtures.h  pack_machine.avx2.cpp  pack_machine.avx512.cpp  pack_machine_test.h  partition_machine.avx2.cpp  partition_machine.avx512.cpp  partition_machine_test.h
tests/packnsort/: packnsort.avx2.cpp  packnsort.avx512.cpp  packnsort_test.h
tests/packunpack/: packunpack.avx2.cpp  packunpack.avx512.cpp  packunpack_test.h
tests/smallsort/: smallsort.avx2.cpp  smallsort.avx2.f.cpp  smallsort.avx2.i.cpp  smallsort.avx2.u.cpp  smallsort.avx512.cpp  smallsort.avx512.f.cpp  smallsort.avx512.i.cpp  smallsort.avx512.u.cpp  smallsort.neon.cpp  smallsort_double.cpp  smallsort_float.cpp  smallsort_int32.cpp  smallsort_int64.cpp  smallsort_test.h  smallsort_uint32.cpp  smallsort_uint64.cpp
vxsort/: CMakeLists.txt  alignment.h  compiler.h  defs.h  isa_detection.cpp  isa_detection.h  isa_detection_msvc.cpp  isa_detection_sane.cpp  machine_traits.avx2.cpp  machine_traits.avx2.h  machine_traits.avx512.h  machine_traits.h  pack_machine.h  packer.h  partition_machine.avx2.h  partition_machine.avx512.h  partition_machine.h  vxsort.avx2.h  vxsort.avx512.h  vxsort.h  vxsort_stats.cpp  vxsort_stats.h  vxsort_targets_disable.h  vxsort_targets_enable_avx2.h  vxsort_targets_enable_avx512.h
vxsort/smallsort/: avx2_load_mask_tables.cpp  bitonic_machine.h  bitonic_sort.AVX2.double.generated.cpp  bitonic_sort.AVX2.double.generated.h  bitonic_sort.AVX2.float.generated.cpp  bitonic_sort.AVX2.float.generated.h  bitonic_sort.AVX2.int32_t.generated.cpp  bitonic_sort.AVX2.int32_t.generated.h  bitonic_sort.AVX2.int64_t.generated.cpp  (+20 more)
(+116 files in other folders)
